[metadata]
name = excertxtract
version = 1.0.0
url = https://github.com/eXhumer/eXCertXtract
author = eXhumer
author_email = exhumer1@protonmail.com
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11
license = GNU General Public License v3 (GPLv3)
license_file = COPYING.md
description = Nintendo Switch SSL certificate extractor
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.11
zip_safe = False
packages =
    excertxtract
    exnut
install_requires =
    pycryptodome
    asn1
    future

[options.entry_points]
console_scripts =
    eXCertXtract = excertxtract._main:__program_main

[flake8]
max-line-length = 99
